[gd_scene load_steps=15 format=2]

[ext_resource path="res://ShootEnemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/AI/1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/AI/dead1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/AI/2.png" type="Texture" id=4]
[ext_resource path="res://Sprites/AI/3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/AI/4.png" type="Texture" id=6]
[ext_resource path="res://Sprites/AI/5.png" type="Texture" id=7]
[ext_resource path="res://Sprites/AI/6.png" type="Texture" id=8]
[ext_resource path="res://Sprites/AI/7.png" type="Texture" id=9]
[ext_resource path="res://Sprites/AI/8.png" type="Texture" id=10]
[ext_resource path="res://FOVEnemy.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 27, 30 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 78, 30 )

[node name="ShootEnemy" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.862745, 0.133333, 0.133333, 1 )
position = Vector2( -0.0307035, 2.38419e-07 )
scale = Vector2( 0.113475, 0.115732 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -111, 0 )
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 6, 2 )
shape = SubResource( 3 )

[node name="Timer2" type="Timer" parent="Area2D"]
wait_time = 0.75

[node name="Position2Ds" type="Position2D" parent="Area2D"]
position = Vector2( 67, 0 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -23, 0 )
enabled = true
cast_to = Vector2( 0, 33 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 13, 15 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -13, 15 )

[node name="Position2D3" type="Position2D" parent="."]

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 0, -19 )
[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_Area2D_area_entered"]
[connection signal="timeout" from="Area2D/Timer2" to="Area2D" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
